--- a/tailwind.css
+++ b/tailwind.css
@@ -6,6 +6,7 @@
   /* Allow changing font family via CMS */
   html {
     font-family: var(--font-family);
+    font-display: swap;
   }
 
   /** Remove default styles from input[type=number] */
